# natanael.arndt.xyz

./: .gitignore  .gitmodules  404.html  404.md  Gemfile  README.txt  Taskfile.yml  _config.yml  about.html  feed.xml  index.html  notes.html  package-lock.json  package.json  projects.html  publications.html  webpack.config.js
404/: index.html
_data/: Makefile  bib.ttl  data.ttl  extra.ttl  extract.py  graph.ttl  notes.yml  prefix.sparql  prefixes.rq  projects.ttl  projects.yml  pyproject.toml  schema.map  selection.sparql
_includes/: head.html  header.html  img.html  poststempel.html  scripts.html  user.html
_layouts/: default.html  page.html  post.html  publication.html  status.html
_posts/: 2016-01-17-welcome-to-jekyll.markdown  2016-02-21-new_webpage.md  2016-03-04-biometrische-passbilder.md  2016-03-11-schwarz-weiss.md  2016-08-28-Sicherheitstest.md  2017-06-20-.md  2017-06-20-status.md  2017-06-20-timezone.md  2017-06-21-DockerJekyllPages0.2.0.md  2017-06-21-djp-0.2.0.md  2017-06-21-private-ssh-keys.md  2017-06-21-public-ssh-keys.md  2017-06-21-timezonefix.md  2017-06-22-new-style.md  2017-06-22-staststrojaner.md  2017-06-23-Forward-SSH-Authentication-To-Docker-Container.md  2017-06-23-djp-0.3.0.md  2017-06-25-peter-schaar.md  2017-07-07-G20HH2017.md  2017-07-10-docker-resolve.md  2017-07-11-djp-0.3.2.md  2017-07-12-Netzneutralität.html  2017-07-12-netneutrality.md  2017-07-14-church-RT.md  2017-07-14-jekyll-rdf-pre.md  2017-07-20-404page.md  2017-07-20-jekyll-rdf-2.1.0.md  2017-07-20-jekyll-rdf-2.1.0_RT.md  2017-07-21-schild-falsch-geparkt.md  (+30 more)
(+326 files in other folders)
